<resources>
    <string name="app_name">OneClass</string>
    <string name="navigation_drawer_open">open</string>
    <string name="navigation_drawer_close">close</string>
    <string name="title_activity_tab4_1">Tab4_1Activity</string>
    <string name="title_activity_tab4_2">Tab4_2Activity</string>
    <string name="title_activity_tab4_3">Tab4_3Activity</string>
    <string name="title_activity_tab4_4">Tab4_4Activity</string>
    <string name="title_activity_tab4_5">Tab4_5Activity</string>
    <string name="title_activity_tab4_6">Tab4_6Activity</string>
    <string name="empty"></string>
    <string name="mon">周一</string>
    <string name="tue">周二</string>
    <string name="wen">周三</string>
    <string name="thu">周四</string>
    <string name="fri">周五</string>
    <string name="sta">周六</string>
    <string name="sun">周日</string>
</resources>
